[project]
name = "streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "langchain>=0.3.18",
    "langchain-experimental>=0.3.4",
    "langsmith>=0.3.8",
    "matplot>=0.1.9",
    "numpy>=2.2.3",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
    "streamlit",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
streamlit = { workspace = true }
